name:         blase
version:      0.0.0
license:      BSD3
license-File: LICENSE
copyright:    (c) Edward Kmett 2010
author:       Edward Kmett
maintainer:   ekmett@gmail.com
stability:    Experimental
category:     Math
homepage:     http://github.com/ekmett/blase
synopsis:     High-performance BLAS bindings for Haskell
description:  High-performance BLAS bindings for Haskell

build-type:   Simple
build-depends:       
    base >= 4 && < 5,
    primitive >= 0.2.1 && < 3

exposed-modules:
    Numeric.BLAS.Raw.Form
    Numeric.BLAS.Raw.Array
    Numeric.BLAS.Raw.Vector

Extra-Source-Files: TODO
GHC-Options: -Wall 
